selenium_test.txt
Python 3.7.4 (tags/v3.7.4:e09359112e, Jul  8 2019, 20:34:20) [MSC v.1916 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> import selenium
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ModuleNotFoundError: No module named 'selenium'
>>> from selenium import webdriver
>>>
>>> browser=webdriver.Chrome()
Traceback (most recent call last):
  File "C:\Users\mohai\AppData\Local\Programs\Python\Python37\lib\site-packages\selenium\webdriver\common\service.py", line 76, in start
    stdin=PIPE)
  File "C:\Users\mohai\AppData\Local\Programs\Python\Python37\lib\subprocess.py", line 775, in __init__
    restore_signals, start_new_session)
  File "C:\Users\mohai\AppData\Local\Programs\Python\Python37\lib\subprocess.py", line 1178, in _execute_child
    startupinfo)
FileNotFoundError: [WinError 2] The system cannot find the file specified

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "C:\Users\mohai\AppData\Local\Programs\Python\Python37\lib\site-packages\selenium\webdriver\chrome\webdriver.py", line 73, in __init__
    self.service.start()
  File "C:\Users\mohai\AppData\Local\Programs\Python\Python37\lib\site-packages\selenium\webdriver\common\service.py", line 83, in start
    os.path.basename(self.path), self.start_error_message)
selenium.common.exceptions.WebDriverException: Message: 'chromedriver' executable needs to be in PATH. Please see https://sites.google.com/a/chromium.org/chromedriver/home

>>> browser=webdriver.Chrome()
Traceback (most recent call last):
  File "C:\Users\mohai\AppData\Local\Programs\Python\Python37\lib\site-packages\selenium\webdriver\common\service.py", line 76, in start
    stdin=PIPE)
  File "C:\Users\mohai\AppData\Local\Programs\Python\Python37\lib\subprocess.py", line 775, in __init__
    restore_signals, start_new_session)
  File "C:\Users\mohai\AppData\Local\Programs\Python\Python37\lib\subprocess.py", line 1178, in _execute_child
    startupinfo)
FileNotFoundError: [WinError 2] The system cannot find the file specified

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "C:\Users\mohai\AppData\Local\Programs\Python\Python37\lib\site-packages\selenium\webdriver\chrome\webdriver.py", line 73, in __init__
    self.service.start()
  File "C:\Users\mohai\AppData\Local\Programs\Python\Python37\lib\site-packages\selenium\webdriver\common\service.py", line 83, in start
    os.path.basename(self.path), self.start_error_message)
selenium.common.exceptions.WebDriverException: Message: 'chromedriver' executable needs to be in PATH. Please see https://sites.google.com/a/chromium.org/chromedriver/home

>>> browser=webdriver.Chrome(executable_path="E:\\Selenium_practice\\chromedriver.exe")

DevTools listening on ws://127.0.0.1:53135/devtools/browser/efe39b9a-0831-4e9f-a583-adbb601f7048
>>>
>>>
>>> browser.get("http://180.211.137.22:8991/Pages/User/BillPrint.aspx")
>>> browser.get_element_by_id("cphMain_txtConsumer")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'WebDriver' object has no attribute 'get_element_by_id'
>>> browser.find_element_by_id("cphMain_txtConsumer")
<selenium.webdriver.remote.webelement.WebElement (session="001b5e28b030756b8cfc4e55210f79c9", element="591abc9c-7e6d-47c4-be7c-075f0928a0f3")>
>>> browser.send_keys("1234")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'WebDriver' object has no attribute 'send_keys'
>>> from selenium.webdriver.common.keys import Keys
>>> browser.send_keys("1234")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'WebDriver' object has no attribute 'send_keys'
>>> x1=browser.find_element_by_id("cphMain_txtConsumer")
>>> x1.send_keys("32673600")
>>> x2=browser.find_element_by_id("cphMain_tbxLocation")
>>> x2.send_keys("B1")
>>> x3=browser.find_element_by_id("cphMain_txtBillCycle")
>>> x3.send_keys("Jan-19")
>>> x4=browser.find_element_by_id("cphMain_btnReport")
>>> x4.click()
>>> import os
>>>
>>>
>>> browser.exec_script("window.open("http://180.211.137.22:8991/Pages/User/BillInformation.aspx"))
  File "<stdin>", line 1
    browser.exec_script("window.open("http://180.211.137.22:8991/Pages/User/BillInformation.aspx"))
                                         ^
SyntaxError: invalid syntax
>>> browser.exec_script("window.open('http://180.211.137.22:8991/Pages/User/BillInformation.aspx')")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'WebDriver' object has no attribute 'exec_script'
>>> browser.execute_script("window.open('http://180.211.137.22:8991/Pages/User/BillInformation.aspx')")
>>>
>>>
>>> x5=browser.find_element_by_id("cphMain_txtConsumer")
>>> x5.send_keys("32673600")
>>> x5.send_keys("32673600")
>>> x5=browser.find_element_by_id("cphMain_txtConsumer")
>>> x5.send_keys("1234")
>>>
>>>
>>> import openpyxl
>>>
>>> wb=openpyxl.load_workbook("C:\\Users\\mohai\\OneDrive\\BPDB\\BPDB_Feni\\Prepaid_Metering\\Prepaid consumer list.xls")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "C:\Users\mohai\AppData\Local\Programs\Python\Python37\lib\site-packages\openpyxl\reader\excel.py", line 316, in load_workbook
    data_only, keep_links)
  File "C:\Users\mohai\AppData\Local\Programs\Python\Python37\lib\site-packages\openpyxl\reader\excel.py", line 124, in __init__
    self.archive = _validate_archive(fn)
  File "C:\Users\mohai\AppData\Local\Programs\Python\Python37\lib\site-packages\openpyxl\reader\excel.py", line 94, in _validate_archive
    raise InvalidFileException(msg)
openpyxl.utils.exceptions.InvalidFileException: openpyxl does not support the old .xls file format, please use xlrd to read this file, or convert it to the more recent .xlsx file format.
>>> wb=openpyxl.load_workbook("C:\\Users\\mohai\\OneDrive\\BPDB\\BPDB_Feni\\Prepaid_Metering\\Prepaid consumer list.xlsx")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "C:\Users\mohai\AppData\Local\Programs\Python\Python37\lib\site-packages\openpyxl\reader\excel.py", line 316, in load_workbook
    data_only, keep_links)
  File "C:\Users\mohai\AppData\Local\Programs\Python\Python37\lib\site-packages\openpyxl\reader\excel.py", line 124, in __init__
    self.archive = _validate_archive(fn)
  File "C:\Users\mohai\AppData\Local\Programs\Python\Python37\lib\site-packages\openpyxl\reader\excel.py", line 96, in _validate_archive
    archive = ZipFile(filename, 'r')
  File "C:\Users\mohai\AppData\Local\Programs\Python\Python37\lib\zipfile.py", line 1207, in __init__
    self.fp = io.open(file, filemode)
FileNotFoundError: [Errno 2] No such file or directory: 'C:\\Users\\mohai\\OneDrive\\BPDB\\BPDB_Feni\\Prepaid_Metering\\Prepaid consumer list.xlsx'
>>>
>>>
>>>
>>>
>>> wb=openpyxl.load_workbook("C:\\Users\\mohai\\OneDrive\\BPDB\\BPDB_Feni\\Prepaid_Metering\\Prepaid consumer list.xls")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "C:\Users\mohai\AppData\Local\Programs\Python\Python37\lib\site-packages\openpyxl\reader\excel.py", line 316, in load_workbook
    data_only, keep_links)
  File "C:\Users\mohai\AppData\Local\Programs\Python\Python37\lib\site-packages\openpyxl\reader\excel.py", line 124, in __init__
    self.archive = _validate_archive(fn)
  File "C:\Users\mohai\AppData\Local\Programs\Python\Python37\lib\site-packages\openpyxl\reader\excel.py", line 94, in _validate_archive
    raise InvalidFileException(msg)
openpyxl.utils.exceptions.InvalidFileException: openpyxl does not support the old .xls file format, please use xlrd to read this file, or convert it to the more recent .xlsx file format.
>>>
>>>
>>>